<resources>
    <string name="app_name">Home Automation</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="register_device">Register Device</string>
    <string name="register">Register</string>
    <string name="menu_back">Back</string>
    <string name="devices">Devices</string>
    <string name="device_lights">Lights</string>
    <string name="device_cameras">Cameras</string>
    <string name="device_temperature">Temperature</string>
    <string name="device_doors">Doors</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_devices">DevicesActivity</string>
    <string name="title_activity_door">Door</string>
    <string name="title_activity_light">Light</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_door_picker">DoorPickerActivity</string>
    <string name="title_activity_light_picker">LightPickerActivity</string>
    <string name="title_activity_camera_picker">CameraPickerActivity</string>


    <string name="set_url_button">Set URL</string>


    <string name="keypair">capstone.com.homeautomation.keypair</string>
    <string name="privkey">privkey</string>
    <string name="pubkey">pubkey</string>

    <string name="privsig">privsig</string>
    <string name="pubsig">pubsig</string>

    <string name="door">Door</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_temperature">TemperatureActivity</string>
</resources>
