<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="homeautomation.capstone.com.homeautomation.DevicesActivity"
    tools:showIn="@layout/activity_devices">

    <Button
        android:id="@+id/doors_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_doors"
        android:layout_marginTop="94dp" />

    <Button
        android:id="@+id/cameras_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_cameras"
        android:layout_marginTop="94dp" />

    <Button
        android:id="@+id/lights_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_lights"
        android:layout_marginTop="94dp" />

</LinearLayout>
